modifiable type for functionals
git-svn-id: svn://localhost/trunk@1066 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -164,6 +164,7 @@ libsurfit_la_SOURCES += src/surfit/f_points_tcl.cpp
 libsurfit_la_SOURCES += src/surfit/f_trend.cpp                                                   
 libsurfit_la_SOURCES += src/surfit/f_value.cpp                                                   
 libsurfit_la_SOURCES += src/surfit/f_wmean.cpp                                                   
+libsurfit_la_SOURCES += src/surfit/f_fault.cpp                                                   
 libsurfit_la_SOURCES += src/surfit/grid.cpp                                                      
 libsurfit_la_SOURCES += src/surfit/grid_internal.cpp                                             
 libsurfit_la_SOURCES += src/surfit/grid_line.cpp                                                 
@@ -258,6 +259,7 @@ libsurfit_la_SOURCES += src/surfit/f_points_tcl.h
 libsurfit_la_HEADERS += src/surfit/f_trend.h           
 libsurfit_la_HEADERS += src/surfit/f_value.h           
 libsurfit_la_HEADERS += src/surfit/f_wmean.h           
+libsurfit_la_HEADERS += src/surfit/f_fault.h           
 libsurfit_la_HEADERS += src/surfit/grid.h              
 libsurfit_la_HEADERS += src/surfit/grid_internal.h     
 libsurfit_la_HEADERS += src/surfit/grid_line.h         
