triangulation and support for other gridding methods
git-svn-id: svn://localhost/trunk@1067 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -165,6 +165,8 @@ libsurfit_la_SOURCES += src/surfit/f_trend.cpp
 libsurfit_la_SOURCES += src/surfit/f_value.cpp                                                   
 libsurfit_la_SOURCES += src/surfit/f_wmean.cpp                                                   
 libsurfit_la_SOURCES += src/surfit/f_fault.cpp                                                   
+libsurfit_la_SOURCES += src/surfit/f_method.cpp
+libsurfit_la_SOURCES += src/surfit/f_triangulate.cpp
 libsurfit_la_SOURCES += src/surfit/grid.cpp                                                      
 libsurfit_la_SOURCES += src/surfit/grid_internal.cpp                                             
 libsurfit_la_SOURCES += src/surfit/grid_line.cpp                                                 
@@ -204,7 +206,8 @@ libsurfit_la_SOURCES += src/surfit/surf_internal.cpp
 libsurfit_la_SOURCES += src/surfit/surf_tcl.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/surfit.cpp            
 libsurfit_la_SOURCES += src/surfit/surfit_wrap.cxx       
-libsurfit_la_SOURCES += src/surfit/variables.cpp         
+libsurfit_la_SOURCES += src/surfit/variables.cpp    
+libsurfit_la_SOURCES += src/surfit/triangle.cpp     
 libsurfit_la_SOURCES += src/surfit/solvers/CG.cpp
 libsurfit_la_SOURCES += src/surfit/solvers/J.cpp
 libsurfit_la_SOURCES += src/surfit/solvers/JCG.cpp
@@ -259,7 +262,9 @@ libsurfit_la_SOURCES += src/surfit/f_points_tcl.h
 libsurfit_la_HEADERS += src/surfit/f_trend.h           
 libsurfit_la_HEADERS += src/surfit/f_value.h           
 libsurfit_la_HEADERS += src/surfit/f_wmean.h           
-libsurfit_la_HEADERS += src/surfit/f_fault.h           
+libsurfit_la_HEADERS += src/surfit/f_fault.h    
+libsurfit_la_SOURCES += src/surfit/f_method.h
+libsurfit_la_SOURCES += src/surfit/f_triangulate.h       
 libsurfit_la_HEADERS += src/surfit/grid.h              
 libsurfit_la_HEADERS += src/surfit/grid_internal.h     
 libsurfit_la_HEADERS += src/surfit/grid_line.h         
@@ -303,7 +308,8 @@ libsurfit_la_SOURCES += src/surfit/surfit_ie.h
 libsurfit_la_HEADERS += src/surfit/surfit_solvers.h  
 libsurfit_la_HEADERS += src/surfit/variables.h         
 libsurfit_la_HEADERS += src/surfit/variables_internal.h
-libsurfit_la_HEADERS += src/surfit/variables_tcl.h     
+libsurfit_la_HEADERS += src/surfit/variables_tcl.h  
+libsurfit_la_HEADERS += src/surfit/triangle.h   
 
 
 libsurfit_la_LIBADD = $(LIBS_SURFIT) $(TCLLIB) libsstuff.la 
