new gridding rule - "contours" for smooth contours approximation and interpolation
git-svn-id: svn://localhost/trunk@1115 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/vc8/globe.vcproj
+++ b/surfit/vc8/globe.vcproj
@@ -59,6 +59,7 @@
 				ObjectFile=".\../Debug/"
 				ProgramDataBaseFileName=".\../Debug/"
 				BrowseInformation="1"
+				BrowseInformationFile=".\../Debug/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -83,7 +84,9 @@
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\..\libs\ZLIB123-DLL\LIB,..\..\LIBS\TCL8.3.5\WIN\DEBUG"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\../Debug/libglobe.pdb"
+				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
+				GenerateMapFile="true"
+				MapFileName=".\../Debug/libglobet.map"
 				ImportLibrary="../bin/libglobe.lib"
 				TargetMachine="1"
 			/>
